*** New: Zwietracht-Säule.
*** New: Seelen-Vorbote.
*** New: Seelen-Dieb.
*** New: Seelen-Magus.
** Prinz Hylas
*** Change: Ansteckender Baumwollschwanz.
** Fürst Grünschuppe
*** Change: Würgende Plage.
** Überfallkommandant Jorb
*** New: Machtvoller Schlag.
*** New: Stillgestanden!.
** General Silgen
*** New: Hitzetrichter.
*** New: Verbrennen.
*** New: In Flammen verankert.
----
v0.8.5
* River of Souls
** Dark Focus
*** Fixed: Error spam on pull.
** Herald Gaurath
*** Fixed: Error spam on pull.
** Plutonus the Immortal
*** Fixed: Error on Phase 1 to Phase 2 transition.
** Alsbeth the Discordant
*** Fixed: Error from Air to Ground phase.
*** Change: Enrage time to 18m.
----
v0.8.4﻿﻿
* Hammerknell
** Matron Zamira
*** Change: Phase 2 is now from 40-30%
*** New: Added Phase 3, starting at 30%
** Soulrender Zilas
*** Change: Reduced timer for Grasp slightly.
* River of Souls
** Dark Foci
*** Fixed: Debuff named incorrectly for personal screen alert.
** Plutonus the Immortal
*** New: Timer and Alert for Walking Sleep.
*** New: Alerts for 40, 30, 20 and 10 percent.
*** New: Phase and Objective Tracking.
** Herald Gaurath
*** New: Phase and objective Tracking for Air/Ground phase.
*** New: Percentage monitoring.
*** New: Cast tracking and Alert for Raise the Dead.
*** New: Timer and Alert for Breath of the Void.
*** New: Alert and duration for Tidings of Woe.
*** New: Timer until Death group rise.
** Alsbeth the Discordant
*** New: Advanced phase and objective tracking.
*** New: Percentage monitoring.
*** New: Full tracking of air, ground and final phases.
*** New: Destroyed Pillar tracking.
*** New: Timer until next air phase.
*** New: Raid wide alert warning for Punish Soul cast.
*** New: Personal alert and duration countdown for Punish Soul debuff.
*** Note: There is no timer for Punish Soul due to it's non-static timing.
*** New: Add persistent Castbars for Soul Magi.
*** New: Timer and Alert for Soul Magi's Soul Destruction.